--- a/src/sass/carousels.scss
+++ b/src/sass/carousels.scss
@@ -9,36 +9,10 @@
         text-align: center;
         background-color: $background_carousel_section; 
         
-        img {
-            width: auto !important;
-            max-height: 600px;
-            margin: auto;
-            max-width: 100%;
+        iframe {
+            width: 100%;
+            height: 517px;
         }
-
-        .wrapper {
-            margin: auto;
-            display: inline-block;
-            position: relative;
-            max-width: 100%;
-
-            .carousel-caption {
-                right: 0;
-                left: 0;
-                bottom: 0;
-                line-height: 20px;
-                padding: 10px 20px;
-                background-color: $carousel_description-color;
-
-                h5 {
-                    color: white;
-                    font-weight: normal;
-                    margin-bottom: 0;
-                    font-size: 16px;
-                }
-            }
-        }
-        
     } 
 
     .carousel-wrapper {
@@ -49,6 +23,8 @@
             
             .swiper-pagination-bullet {
                 margin: 0 3px;
+                width: 10px;
+                height: 10px;
                
                 &-active {
                     background-color: $text-color;
@@ -72,6 +48,10 @@
     #carousel .carousel-item img {
         max-height: 400px;
     }
+
+    #carousel .carousel_item iframe{ 
+        height: 433px;
+    }
 }
 
 
@@ -90,9 +70,18 @@
   
 }
 
+@media screen and (max-width: 992px) {
+    #carousel .carousel_item iframe{ 
+        height: 388px;
+    }
+}
+
 
 @media screen and (max-width: 768px) {
     #carousel {
+        .carousel_item iframe{ 
+            height: 286px;
+        }
 
         .carousel-item img {
               max-height: 340px;
