--- a/src/sass/pricing.scss
+++ b/src/sass/pricing.scss
@@ -67,7 +67,6 @@
             }      
         }
       
-
     }
 }
 
@@ -95,6 +94,9 @@
                     margin-bottom: 5px;
                 }
             }
-        }     
+        }         
+    }
+    .continue {
+        font-size: 12px;
     }
 }
